# ncvoters

./: .gitignore  CHANGELOG.md  METADATA_PLAN.md  Makefile  README.md  config_test.go  dirstruct.md  doc.go  download_voters.py  get-voter-data  go.sum  mapreduce.go  ncvoters.py  pyproject.toml  requirements.txt  sample_config.yaml  setup.py
create/: database_test.go  doc.go  sanitize_test.go  zip_entry_test.go
docs/: dplan.md  iplan.md
download/: content_length_test.go  doc.go  download_file.go  download_file_test.go
go/: CHANGELOG.md  config.go  db.go  db_test.go  debugcmds  dv.go  dv_test.go  functions.go  functions_test.go  go.mod  go.sum  instructions.txt  main.go  mapreduce_test.go  ncvoters.md  step1.go  step1_test.go  step2.go  step2_test.go  step3.go
ncvoters/: __init__.py  __main__.py  application.py  cli.py  domain.py  logging_config.py  ports.py
notebooks/: age_by_county.ipynb  origin.ipynb  top10.ipynb  top10_ekh.ipynb
scripts/: db_path.py  download-voters.py  download.py  download_voters.py  indexes.py  load.py  metadata.py  top10.ipynb  top10names.py  unzip.py  views.py
sql/: active_voters_view.sql  counties.sql  reasons.sql  status_codes.sql
testdata/: ten_voters.txt
tests/: __init__.py  spike_unzip_blocks.py  test_application.py  test_csvextractor.py  test_dbcreator.py  test_dbloader.py  test_domain.py  test_downloader.py  test_extractor.py  test_voter_csv.py  test_zip_to_csv.py  test_zpdownloader.py
util/: file_exists.go  file_exists_test.go  good_zip_file.go  good_zip_file_test.go
voters/: __init__.py  active_voters_view.sql  csvextractor.py  dbcreator.py  dbloader.py  downloader.py  extractor.py  unzipper.py  zipdownloader.py
webdata/: column.go  ddlColumns.go  layout.go  (+11 more)
(+58 files in other folders)
