[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncvoters"
version = "0.1.0"
description = "Download and create an SQLite database of NC voter registrations"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
get-voter-data = "ncvoters.cli.main:main"
apply-views    = "ncvoters.cli.apply_views:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ncvoters"]

[tool.pytest.ini_options]
testpaths = ["tests"]
