[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncvoters"
version = "1.1.0"
description = "Download and create an SQLite database of NC voter registrations"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
get-voter-data  = "ncvoters.cli.main:main"
apply-views     = "ncvoters.cli.apply_views:main"
apply-indexes   = "ncvoters.cli.apply_indexes:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ncvoters"]

[tool.pytest.ini_options]
testpaths = ["tests"]
